refactor: (refactoring Api docs)
